# mi-backend-trainee-assignment

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-check.yml
protobufs/services/private_avito_api_executor/: private_avito_api_executor.proto
services/amount_ads_observer/: container.py  dal.py  main.py  models.py  utils.py
services/amount_ads_observer/routers/: __init__.py  amount_ads_observer.py
services/amount_ads_observer/schemas/: ads_observer.py  ads_observer_stat.py  city.py
services/announcement_observer/: __init__.py  container.py  dal.py  main.py  models.py  utils.py
services/db/: __init__.py  config.py  types.py
services/private_avito_api_executor/: Dockerfile  __init__.py  config.py  grpc_client.py  main.py
services/private_avito_api_executor/grpc/: __init__.py  server.py
services/private_avito_api_executor/schemas/: __init__.py  base.py  items.py
services/worker/: app.py  config.py  container.py
utils/: datetime.py
utils/avito_parser/: __init__.py  advertisement.py
utils/playwright/: __init__.py  request.py
utils/sqlalchemy/: dal.py  protocols.py
utils/tests/: __init__.py  test_datetime.py
