[tool.poetry]
name = "mi-backend-trainee-assignment"
version = "0.1.0"
description = ""
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
dependency-injector = "^4.39.1"
loguru = "^0.6.0"
asyncpg = "^0.25.0"
celery = "^5.2.7"
redis = "^4.3.3"
httpx = "^0.23.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
types-redis = "^4.3.1"
celery-types = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"