[tool.poetry]
name = "mi-backend-trainee-assignment"
version = "0.1.0"
description = ""
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
dependency-injector = "^4.39.1"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
celery = "^5.2.7"
redis = "^4.3.4"
beautifulsoup4 = "^4.11.1"
fake-headers = "^1.0.2"
grpcio = "^1.46.3"
grpcio-tools = "^1.46.3"
playwright = "^1.24.0"
psycopg2-binary = "^2.9.3"
asgiref = "^3.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
types-redis = "^4.3.11"
celery-types = "^0.13.1"
types-protobuf = "^3.19.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
plugins = "sqlalchemy.ext.mypy.plugin"